# iotauth-parachain

node/src/: chain_spec.rs
pallets/iot-auth/: Cargo.toml
pallets/iot-auth/src/: benchmarking.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
